# lidar_sf30d

./: CMakeLists.txt  CMakePresets.json  README.md  project_tree.txt
cmake/: arm-none-eabi-gcc.cmake  stm32g4.cmake
device/: system_stm32g4xx.c
drivers/: lidar.c  lidar.h  usart.c  usart.h
misc/: sf30d_record_data.py
src/: init.c  init.h  interrupts.c  main.c  syscall.c
